<resources>
    <string name="app_name">STEPS</string>
    <string name="action_settings">Settings</string>
    <string name="action_export">Export</string>
    <string name="action_add">Add</string>
    <string name="action_done">DONE</string>
    <string name="action_new_household">New Household</string>
    <string name="action_household">Household</string>
    <string name="save_button">Save</string>
    <string name="device_id_label">Device ID</string>
    <string name="phone_id_message">Set the Device ID first!</string>
    <string name="phone_id_message_title">Alert</string>
    <string name="phone_number">Phone Number:</string>
    <string name="phone_number_hint">Contact Phone Number</string>
    <string name="household_id_label">Household ID</string>
    <string name="household_id_hint">Household ID</string>
    <string name="member_family_surname_hint">Family Surname</string>
    <string name="member_first_name_hint">First Name</string>
    <string name="member_gender_hint">Gender</string>
    <string name="member_age_hint">Age</string>
    <string name="male_label">Male</string>
    <string name="female_label">Female</string>
    <string name="action_select_participant">Select Participant</string>
    <string name="action_member">Member</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="refused">REFUSED</string>
    <string name="reason">Reason</string>
    <string name="confirm_ok">Confirm</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_participant_message">Please confirm that all eligible household members have been entered and you are ready to proceed with selection.</string>
    <string name="survey_refusal_title">Confirm Refusal</string>
    <string name="survey_refusal_message">You are going to mark the household for refusal. This action can not be reversed. Are you sure?</string>
    <string name="survey_deferred_title">Survey Deferred</string>
    <string name="survey_deferred_message">The survey has been deferred, you can complete the survey later for this household</string>
    <string name="odk_app_not_installed">The ODK Collect app is not installed, please install it before proceeding</string>
    <string name="form_not_present">The required form is not present. Please download the form and try again.</string>
    <string name="form_not_present_title">Form Missing</string>
    <string name="something_went_wrong_try_again">Something went wrong, please try again.</string>
    <string name="error_title">Error</string>
    <string name="warning_title">Warning</string>
    <string name="warning_merging_data">This is going to download all the households listed on the server that are not on your device. Do you want to proceed?</string>
    <string name="household_id_seed_label">Starting Household ID</string>
    <string name="household_id_default_hint">default is 1</string>
    <string name="member_delete_confirm">Are you sure you want to delete the member?</string>
    <string name="enter_a_value">Please enter a value</string>
    <string name="endpoint_url_hint">URL to export</string>
    <string name="import_url_hint">URL to import</string>
    <string name="main_header">Households</string>
    <string name="household_members_header">Household Members</string>
    <string name="go_to_settings">GET STARTED</string>
    <string name="welcome_message">Welcome! Start using the WHO STEPS app by entering your Device ID in the app settings.</string>
    <string name="household_edit_header">Edit Household</string>
    <string name="household_new_header">Add New Household</string>
    <string name="member_edit_header">Edit Member</string>
    <string name="member_new_header">Add New Member</string>
    <string name="action_import">Import</string>
    <string name="proceed_with_selection">PROCEED WITH SELECTION</string>
    <string name="return_to_household_member_list">RETURN TO HOUSEHOLD MEMBER LIST</string>
    <string name="select_participant_title">SELECT PARTICIPANT</string>
    <string name="add_new_household">Add New Household</string>
    <string name="add_new_member">Add New Member</string>
    <string name="phone_id_name">"Device ID"</string>
    <string name="age_hint">Age (in years)</string>
    <string name="interview_now">INTERVIEW NOW</string>
    <string name="interview_later">INTERVIEW LATER</string>
    <string name="selected_participant">Selected Member</string>
    <string name="age_range">Min and max age</string>
    <string name="max_age">Max age</string>
    <string name="min_age">Min age</string>
    <string name="survey_done_message">Survey is complete!</string>
    <string name="survey_refused_message">Survey is refused!</string>
    <string name="action_submit_forms">Send Survey Records</string>
    <string name="export_failed">Failed to send data, please try again later.</string>
    <string name="export_complete">Transfer Complete</string>
    <string name="export_complete_message">The data has been successfully sent</string>
    <string name="export_start_message">Please confirm you want to send household data.</string>
    <string name="import_complete">Import Complete</string>
    <string name="import_complete_message">The data has been imported successfully.</string>
    <string name="import_fail_message">Import failed, please double check Device ID and try again.</string>
    <string name="save_to_sdcard_complete">Back up to SD Card complete</string>
    <string name="save_to_sdcard_complete_message">The data has been backed up to SD Card successfully.</string>
    <string name="fail_no_connectivity">Operation failed, Check your internet connectivity.</string>
    <string name="continue_interview">Continue Interview</string>
    <string name="household_comments">Comments</string>
    <string name="form_id">Form ID</string>
    <string name="cancel_selection">CANCEL SELECTION</string>
    <string name="add">ADD</string>
    <string name="pid">PID:</string>
    <string name="export_household_list">Send Household Data</string>
    <string name="hhid">HHID:</string>
    <string name="age_not_in_range">Age (not in the range of</string>
    <string name="invalid">Invalid</string>
    <string name="fill_correct_message">please fill or correct the following fields:</string>
    <string name="household_id">Household ID:</string>
    <string name="members">members</string>
    <string name="participant_id">Participant ID</string>
    <string name="undefined_label">undefined</string>
    <string name="participant_header">Participants</string>
    <string name="action_add_participant">Add New Participant</string>
    <string name="participant">Participant</string>
    <string name="interview_refused_message">Interview is refused!</string>
    <string name="interview_done_message">Interview is complete!</string>
    <string name="participant_survey_deferred_message">The survey has been deferred, you can complete the survey later for this person.</string>
    <string name="participant_survey_refusal_message">You are going to mark this participant for refusal. This action can not be reversed. Are you sure?</string>
    <string name="select_app_type">Select app type</string>
    <string name="enter_data_now">ENTER DATA NOW</string>
    <string name="enter_data_later">ENTER DATA LATER</string>
    <string name="edit_participant_header">Edit Participant</string>
    <string name="error_no_sdcard">You attempted to backup data to an SD Card, however, your device does not have an SD Card. Please insert one to proceed with the backup.</string>
    <string name="action_save_to_sdcard">Backup to SD Card</string>
    <string name="error_cannot_write_sdcard">Backup to SD Card not complete due to write permissions; Please contact your supervisor for assistance.</string>
    <string name="select_backup_label">Tap on the button to select your backup location</string>
    <string name="backup_location">Backup location</string>
    <string name="select_backup_location">Select Backup Location</string>
    <string name="refused_or_unable">REFUSED / UNABLE TO INTERVIEW</string>
    <string name="survey_partially_completed">Survey was partially completed!</string>
    <string name="interview_partially_completed">Interview was partially completed!</string>
    <string name="refused_or_unable_to_complete">Refused / Unable to Complete</string>
    <string name="invalid_settings">Invalid Settings, please fill or correct the following fields:</string>
    <string name="invalid_member">Invalid Member, please fill or correct the following fields:</string>
    <string name="invalid_participant">Invalid Participant, please fill or correct the following fields:</string>
    <string name="action_submit_data">Send Data</string>
    <string name="create_settings_password">Create a password for the settings screen</string>
    <string name="settings_password_title">Password</string>
    <string name="enter_settings_password">Enter the settings screen password</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="incorrect_password">The password you entered is incorrect</string>
    <string name="action_erase_data">Wipe Data</string>
    <string name="warning_erasing_data">This will wipe all household and participant data on this device. Do you want to proceed?</string>
    <string name="data_wipe_successful">Data successfully wiped</string>
    <string name="households">Households</string>
    <string name="participants">Participants</string>
    <string name="import_export_settings">Import/Export Settings via QR Code</string>
    <string name="encoding_max_limit">Maximum characters limit reached: QR code can\'t be generated for all settings</string>
    <string name="import_qr_code_error_msg">Import settings via QR code failed</string>
    <string name="import_export_settings_title">Import/Export Settings</string>
    <string name="error_generating_qr_code">An error occurred generating the settings QR Code</string>
    <string name="cancelled">Cancelled</string>
    <string name="import_qr_code_success_msg">Settings have been updated via QR code</string>
    <string name="share_qr_code_title">Share Settings QR Code</string>
    <string name="qr_code_share_error">Sorry! QR Code cannot be shared! An error occurred</string>
    <string name="settings_saved_successfully">Your settings were saved!</string>
    <string name="select_qr_code">Select QR Code</string>
    <string name="select_code_from_sd_card">Select code from SD Card</string>
    <string name="scan_code_from_another_device">Scan code from another device</string>
    <string name="please_wait">Please wait</string>
    <string name="not_reachable">NOT REACHABLE</string>
    <string name="survey_not_reachable_message">You are going to mark the household for not reachable. This action can not be reversed. Are you sure?</string>
    <string name="survey_not_reachable_title">Confirm Not Reachable</string>
    <string name="participant_survey_not_reachable_message">You are going to mark this participant for not reachable. This action can not be reversed. Are you sure?</string>
    <string name="interviewee_not_reachable_message">Interviewee is not reachable!</string>
    <string name="user_id_label">Username</string>
    <string name="view_totals">View Totals</string>
    <string name="interview_done">Interview complete</string>
    <string name="empty_household">Empty household</string>
    <string name="interview_deffered">Interview postponed</string>
    <string name="interview_refused">Interview refused</string>
    <string name="interview_incomplete">Interview partially complete</string>
    <string name="not_reachable_household">Not reachable household</string>
    <string name="total_households">Total households</string>
    <string name="user_password_label">Password</string>
</resources>