<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/member_form"
    android:background="@android:color/white">
    <include layout="@layout/dialog_header"/>
    <View android:layout_height="1dp"
        android:layout_width="fill_parent"
        android:background="@android:color/darker_gray"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/member_family_surname_hint"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/member_family_surname"
        android:hint="@string/member_family_surname_hint"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@android:color/black"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/member_first_name_hint"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/member_first_name"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:hint="@string/member_first_name_hint"
        android:textColor="@android:color/black"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/member_age_hint"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/member_age"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:hint="@string/age_hint"
        android:textColor="@android:color/black"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/member_gender_hint"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"/>
    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/member_gender"
        android:layout_marginLeft="5dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_label"
            android:id="@+id/male_selection"
            android:textColor="@android:color/black"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_label"
            android:id="@+id/female_selection"
            android:textColor="@android:color/black"
            android:layout_marginLeft="20dp"/>
    </RadioGroup>

</LinearLayout>