<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/exportHouseholdListCheckBox"
        android:text="@string/export_household_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:checked="true" />

    <CheckBox
        android:id="@+id/submitRecordsCheckBox"
        android:text="@string/action_submit_forms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exportHouseholdListCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:checked="true" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_below="@+id/submitRecordsCheckBox"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        style="@style/GreenButtonStyle" />
</RelativeLayout>