<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2016. World Health Organization
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dialog_layout_id"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_participant_message"
        android:id="@+id/select_participant_message"
        android:padding="15dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/confirm"
        android:text="@string/proceed_with_selection"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_below="@+id/select_participant_message"
        android:background="@android:color/holo_blue_dark"
       />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/return_to_household_member_list"
        android:id="@+id/cancel"
        android:textSize="12sp"
        android:layout_below="@+id/confirm"/>

</RelativeLayout>