<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:clickable="true"
            android:scaleType="fitStart"
            android:longClickable="true"
            android:text = "@string/action_done"
            android:drawableLeft="@drawable/ic_done"
            android:background="@android:color/transparent"
            android:textColor="@android:color/black"
            android:onClick="saveHousehold"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/household_form_header"
            android:textColor="#008148"
            android:layout_marginLeft="-70dp"
            android:gravity="center_horizontal" />
    </LinearLayout>
    <View android:layout_height="1dp"
        android:layout_width="fill_parent"
        android:background="#73C7E5"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/household_id"
        android:layout_marginLeft="10dp"
        android:id="@+id/generated_household_id_label"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/generated_household_id"
        android:textColor="#ff888888"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_hint"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/household_number"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:textColor="@android:color/black"/>

</LinearLayout>